--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+group = "org.eclipse.keyple.keypleless.distributed.client"
+title = Keyple Kotlin Multiplatform Distributed Client Library
+description = Keyple Distributed Client KMP Library - A Kotlin Multiplatform implementation enabling distributed remote client communications across Android, iOS and desktop platforms
+version = 0.1.2
+
 kotlin.code.style=official
 
 #Gradle
